Added previous version section

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -15,8 +15,39 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Justin Adams</h2>
-                        <p class="text-white-50">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur minima, maiores beatae, rerum veniam nemo obcaecati corrupti itaque iusto, odio tempore molestiae deleniti culpa corporis dolore possimus modi odit reiciendis qui? Fuga explicabo cupiditate tempore rerum, vero nisi a corporis. Consequuntur voluptatem alias et sunt ex unde repellendus. Est, dignissimos!</p>
+                        <p class="text-white-50">
+                            This Nodejs Weather app was created from an Udemy tutorial. The app uses two different apis MapBox and Darksky.
+                            With the use of these apis the app is able to get current weather data of a provided location defined by the users
+                        </p>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section id="versions" class="p-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 align-self-center text-center">
+                        <h3>Previous Version</h3>
+                        <p class="lead">
+                            Checkout the previous version of this application
+                        </p>
+                        <a href="https://adams-weather-app-web-origin.herokuapp.com/" class="btn btn-primary btn-lg"
+                        >Live View</a
+                        >
+                        <a href="https://github.com/adamsjlcode/nodejs-weather-app-master" class="btn btn-primary btn-lg"
+                        >View Code</a
+                        >
+                    </div>
+                        <div class="col-md-6 align-self-center text-center">
+                            <h3>Current Version</h3>
+                            <p class="lead">
+                                This version of the weather app expanded Bootstrap, added Swagger Docs, added Font
+                                Awesome icons, and a lot more. Check this version code below.
+                            </p>
+                            <a href="https://github.com/adamsjlcode/nodejs-weather-app-v2" class="btn btn-primary btn-lg"
+                            >View Code</a
+                            >
+                        </div>
                 </div>
             </div>
         </section>
